--- a/content/build_information.html
+++ b/content/build_information.html
@@ -435,69 +435,75 @@ document.write(`
 </thead>
 <tbody>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="00_Download_Data.html"><span class="doc">content/00_Download_Data</span></a></p></td>
-<td><p>2025-06-10 00:32</p></td>
+<td><p>2025-06-21 23:38</p></td>
 <td><p>auto</p></td>
-<td><p>10.08</p></td>
+<td><p>9.99</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="01_Optimal_Combination_with_t2smap.html"><span class="doc">content/01_Optimal_Combination_with_t2smap</span></a></p></td>
-<td><p>2025-06-10 00:34</p></td>
+<td><p>2025-06-21 23:39</p></td>
 <td><p>auto</p></td>
-<td><p>65.5</p></td>
+<td><p>61.49</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="02_Volume-wise_T2star_estimation_with_t2smap.html"><span class="doc">content/02_Volume-wise_T2star_estimation_with_t2smap</span></a></p></td>
-<td><p>2025-06-10 00:34</p></td>
+<td><p>2025-06-21 23:39</p></td>
 <td><p>auto</p></td>
-<td><p>36.92</p></td>
+<td><p>34.72</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="03_Denoising_with_tedana.html"><span class="doc">content/03_Denoising_with_tedana</span></a></p></td>
-<td><p>2025-06-10 00:37</p></td>
+<td><p>2025-06-21 23:42</p></td>
 <td><p>auto</p></td>
-<td><p>169.38</p></td>
+<td><p>159.97</p></td>
 <td><p><abbr title="CellExecutionError">❌</abbr></p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="04_Dual_Echo_Denoising.html"><span class="doc">content/04_Dual_Echo_Denoising</span></a></p></td>
-<td><p>2025-06-10 00:37</p></td>
+<td><p>2025-06-21 23:42</p></td>
 <td><p>auto</p></td>
-<td><p>2.99</p></td>
+<td><p>2.94</p></td>
 <td><p><abbr title="CellExecutionError">❌</abbr></p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="05_3dMEPFM.html"><span class="doc">content/05_3dMEPFM</span></a></p></td>
-<td><p>2025-06-10 00:37</p></td>
+<td><p>2025-06-21 23:42</p></td>
 <td><p>auto</p></td>
-<td><p>1.41</p></td>
+<td><p>1.32</p></td>
 <td><p><abbr title="CellExecutionError">❌</abbr></p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="07_Manual_Classification_with_rica.html"><span class="doc">content/07_Manual_Classification_with_rica</span></a></p></td>
-<td><p>2025-06-10 00:37</p></td>
+<td><p>2025-06-21 23:42</p></td>
 <td><p>auto</p></td>
-<td><p>0.8</p></td>
+<td><p>0.82</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="Acquiring_Multi_Echo_Data.html"><span class="doc">content/Acquiring_Multi_Echo_Data</span></a></p></td>
-<td><p>2025-06-10 00:37</p></td>
+<td><p>2025-06-21 23:42</p></td>
 <td><p>auto</p></td>
-<td><p>3.17</p></td>
-<td><p>✅</p></td>
+<td><p>4.6</p></td>
+<td><p><abbr title="CellExecutionError">❌</abbr></p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="Signal_Decay.html"><span class="doc">content/Signal_Decay</span></a></p></td>
-<td><p>2025-06-10 00:38</p></td>
+<td><p>2025-06-21 23:43</p></td>
 <td><p>auto</p></td>
-<td><p>37.19</p></td>
+<td><p>36.62</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="TE_Dependence.html"><span class="doc">content/TE_Dependence</span></a></p></td>
-<td><p>2025-06-10 00:38</p></td>
+<td><p>2025-06-21 23:43</p></td>
 <td><p>auto</p></td>
-<td><p>5.17</p></td>
+<td><p>5.04</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="plot_approach_figures.html"><span class="doc">content/plot_approach_figures</span></a></p></td>
-<td><p>2025-06-10 00:38</p></td>
+<td><p>2025-06-21 23:43</p></td>
 <td><p>auto</p></td>
-<td><p>4.37</p></td>
+<td><p>4.28</p></td>
+<td><p><abbr title="CellExecutionError">❌</abbr></p></td>
+</tr>
+<tr class="row-odd"><td><p><a class="xref doc reference internal" href="../notebooks/fMRI_Sequences_pulse_sequence_visualizations.html"><span class="doc">notebooks/fMRI_Sequences_pulse_sequence_visualizations</span></a></p></td>
+<td><p>2025-06-21 23:43</p></td>
+<td><p>auto</p></td>
+<td><p>1.33</p></td>
 <td><p><abbr title="CellExecutionError">❌</abbr></p></td>
 </tr>
 </tbody>
